# toy-chain

./: .gitignore  Cargo.toml  config.toml
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/hasher/: Cargo.toml
crates/hasher/src/: lib.rs
crates/mini-node/: Cargo.toml
crates/mini-node/src/: main.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: lib.rs
crates/txpool/: Cargo.toml
crates/txpool/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: transaction.rs
