[workspace]
resolver = "2"
members = [
  "bin/mini-node"
, "crates/hasher", "crates/rpc-server", "crates/txpool", "crates/types"]


[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }
types ={ path = "./crates/types"}
serde = { version = "1.0.228", features = ["derive"] }
blake3 = "1.8.3"
serde_json = "1.0.149"
hasher = {path = "./crates/hasher"}
txpool ={ path = "./crates/txpool"}