[workspace]
resolver = "2"
members = [
  "bin/toy-chain"
, "crates/config", "crates/hasher", "crates/rpc-server", "crates/txpool", "crates/types"]


[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
jsonrpsee = { version = "0.26.0", features = ["server", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
blake3 = "1.8.3"
serde_json = "1.0.149"
clap = { version = "4.5.57", features = ["derive"] }
toml = "0.9.11"

hasher = {path = "./crates/hasher"}
txpool ={ path = "./crates/txpool"}
types ={ path = "./crates/types"}
config = {path = "./crates/config"}
config_rs = { package = "config", version = "0.15.19" }